# pomodoro-rs

./: Cargo.toml
src/: cli.rs  config.rs  main.rs  notifications.rs  state.rs  timer.rs
